* Added resizable capabilities: the stage starts at maximum visible size of the primary screen, keeping the aspect ratio of the game. Then it can be resized, to any bigger or smaller size (up to half size of the actual game dimensions). * Fixed dropshadow effect problem: with bigger radius, the effect moves the game, and in the Raspberry Pi this could even cause exceptions. By adding a rectangle to clip the grid, all the effects are applied within the grid. * Fixed points location when scaling up or down the scene.

--- a/src/game2048/game.css
+++ b/src/game2048/game.css
@@ -20,7 +20,7 @@
     -fx-text-fill: rgba(119, 110, 101, 0.9);
 }
 .time {
-    -fx-font-size: 12px;
+    -fx-font-size: 14px;
     -fx-text-fill: #bbada0;
 }
 .backGrid {
